# Yu-Gi-Oh-Scraper

./: .gitignore  CHANGELOG.md  Pipfile  README.md  pyproject.toml  requirements.txt  scrapy.cfg  test.py
.devcontainer/: devcontainer.json
.github/: labeler.yml
.github/workflows/: codeql.yml  continuous-integration.yml  python-publish.yml
db_yugioh_card/: scrapy.cfg
db_yugioh_card/db_yugioh_card/: middlewares.py  pipelines.py  settings.py
db_yugioh_card/db_yugioh_card/spiders/: example.py
logs/: app.log.1  app.log.2  app.log.3  app.log.4  app.log.5
yugioh_scraper/: __init__.py  hello.py  items.py  logging_config.py  middlewares.py  pipelines.py  settings.py  yugipedia.py
yugioh_scraper/config/: image.py
yugioh_scraper/spiders/: db_yugioh_card.py
yugioh_scraper/test/: test_hello.py  test_yugipedia.py
