[tool.poetry]
name = "yugioh-scraper"
version = "1.0.0"
description = "A simple Hello World package"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[tool.poetry.scripts]
hello-world = 'hello_world.hello:say_hello'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
